zokrates_cli/examples/compile_errors/log_wrong_count.zok
def main() {
    log("{} {}", 1f);
    return;
}